Upgrading to java 21 and fix cucumber tests